--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-puppeteer": "^11.0.0",
     "jsdom": "^26.0.0",
     "puppeteer": "^24.5.0",
@@ -29,5 +30,8 @@
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.1"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   }
 }
